@@ -3,7 +3,8 @@ Section: x11
 Priority: optional
 Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
 Build-Depends:
- debhelper (>= 5.0.0),
+ debhelper (>= 9),
+ dh-autoreconf,
  automake,
  xutils-dev (>= 1:7.6+2),
  pkg-config,
