@@ -1,98 +1,23 @@
 #!/usr/bin/make -f
 # debian/rules for the Debian x11proto-kb-dev package.
-# Copyright © 2004 Scott James Remnant <scott@netsplit.com>
-# Copyright © 2005 Daniel Stone <daniel@fooishbar.org>
-# Copyright © 2005 David Nusinow <dnusinow@debian.org>
-
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
 
 PACKAGE = x11proto-kb-dev
 
-include debian/xsfbs/xsfbs.mk
+%:
+	dh $@ --with autoreconf --parallel --builddirectory=build/
 
-CFLAGS = -Wall -g
-ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-	MAKEFLAGS += -j$(NUMJOBS)
-endif
+override_dh_auto_configure:
+	dh_auto_configure -- \
+		--libdir=/usr/lib \
+		--docdir=\$${datadir}/doc/x11proto-kb-dev \
+		--enable-specs \
+		--without-fop \
+		--with-xmlto
 
-DEB_HOST_ARCH      ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
-DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
-ifeq ($(DEB_BUILD_GNU_TYPE), $(DEB_HOST_GNU_TYPE))
-	confflags += --build=$(DEB_HOST_GNU_TYPE)
-else
-	confflags += --build=$(DEB_BUILD_GNU_TYPE) --host=$(DEB_HOST_GNU_TYPE)
-endif
+override_dh_auto_install:
+	dh_auto_install --destdir=debian/tmp
 
-
-build: build-stamp
-build-stamp:
-	dh_testdir
-
-	autoreconf -vfi
-	mkdir -p build
-	cd build && \
-	../configure --prefix=/usr --mandir=\$${prefix}/share/man \
-	             --infodir=\$${prefix}/share/info \
-		     --docdir=\$${datadir}/doc/x11proto-kb-dev \
-		     --enable-specs --without-fop --with-xmlto \
-	             $(confflags) CFLAGS="$(CFLAGS)" 
-	cd build && $(MAKE)
-
-	>$@
-
-clean:
-	dh_testdir
-	rm -f build-stamp
-	rm -f config.cache config.log config.status
-	rm -f */config.cache */config.log */config.status
-	rm -f conftest* */conftest*
-	rm -rf autom4te.cache */autom4te.cache
-	rm -rf build
-	rm -f aclocal.m4 configure install-sh missing mkinstalldirs
-	rm -f config.guess config.sub
-	find -name Makefile.in -delete
-	dh_clean
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_installdirs
-
-	cd build && $(MAKE) DESTDIR=$(CURDIR)/debian/tmp install
-
-# Build architecture-independent files here.
-binary-indep: build install
-	dh_testdir
-	dh_testroot
-
-	dh_installdocs
-	dh_installman
+override_dh_install:
 	find debian/tmp/usr/share/doc/x11proto-kb-dev -name '*.xml' -delete
 	find debian/tmp/usr/share/doc/x11proto-kb-dev -name '*.db' -delete
 	dh_install --sourcedir=debian/tmp --fail-missing
-	dh_installchangelogs
-	dh_link
-	dh_strip
-	dh_compress
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-# Build architecture-dependent files here.
-binary-arch: build install
-# Nothing to do
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install
